--- a/archive.html
+++ b/archive.html
@@ -5,35 +5,191 @@
 	<head> 
 		<link href='https://fonts.googleapis.com/css?family=Merriweather|Montserrat:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<title>MICA Graphic Design</title>
 	</head>
 
-	<body> 
-		<div class="top-nav">
-			<ul>
-				<li>MICA GD</li>
-				<li>Archive</li>
-				<li>Calendar</li>
-				<li>Resources</li>
-				<li>Contribute</li>
-			</ul>
+	<body bgcolor="#040603"> 
+<nav>
+  <ul>
+    <li><a href="index.html">MICA GD</a></li>
+    <li><a href="archive.html">Archive</a></li>
+    <li><a href="calendar.html">Calendar</a></li>
+    <li><a href="resources.html">Resources</a></li>
+    <li><button class="search"><a href="#">Contribute</a></button></li>
+  </ul>
+</nav>
+
+<nav class="bottom">
+  <ul class="bottom">
+    <li><a href="http://micadesign.org/">GD MFA</a></li>
+    <li><a href="http://micagraphicdesignpb.org/">Post-Bac</a></li>
+    <li><a href="mailto:bhorne@mica.edu?Subject=hey%20there%20MICA%20GD" target="_blank" title="Contact">Contact</a>
+    </li>
+    <li><a href="http://mica.edu/">MICA.edu</a></li>
+    <li><button class="search"><a href="#">Search</a></button></li>
+  </ul>
+</nav>
+	
+<div class="search-field">
+
+			<div class="toggle search-close">
+			<button class="search-close">
+				&times;
+			</button>
 		</div>
-		<div class="bottom-nav">
-			<ul>
-				<li>GD MFA</li>
-				<li>Post-Bac</li>
-				<li>Contact</li>
-				<li>MICA.edu</li>
-				<li>Search</li>
-			</ul>
-		</div>
-		<div class="title">
-			<h1>Archive.</h1><h2>Event</h2>
-		</div>
-		<div class="thumbnails">
-			<div class="thumb-info">
-				<h3>Sep15.Lorem ipsum dolor sit amet, consecta dipisicing elit.</h3>
+			<div class="type-search">
+					<h4>
+						search
+						<hr SIZE="4" NOSHADE COLOR="#ffffff">
+					</h4>
+
 			</div>
 		</div>
 
+		<div class="title">
+		<h2><strong>Archive.</strong>Event Lecture</h2>
+		</div>
+		
+		
+
+		</div>
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+					<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+					<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+					<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+					<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+					<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+					<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+				<div class="imgWrapArch">
+				  <img src="sample_image_01.png" class="arch">
+				  <h4 class="imgDescriptionArch"><strong>Nov20.</strong>Lorem ipsum delorum sit amet, consecta dipisicing elit.
+				  </h4>
+				</div>
+
+			</div>
+
+			</html>
+	
 	</body>
+
+<script>
+
+$(document).ready(function(){
+    $("button.search").click(function(){
+        $(".search-field").toggle();
+    });
+});
+
+</script>
+
+<script>
+
+$(document).ready(function(){
+    $("button.search-close").click(function(){
+        $(".search-field").toggle();
+    });
+});
+
+</script>
+
+
+
+
