--- a/resources.html
+++ b/resources.html
@@ -5,33 +5,116 @@
 	<head> 
 		<link href='https://fonts.googleapis.com/css?family=Merriweather|Montserrat:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<title>MICA Graphic Design</title>
 	</head>
 
-	<body> 
-		<div class="top-nav">
-			<ul>
-				<li>MICA GD</li>
-				<li>Archive</li>
-				<li>Calendar</li>
-				<li>Resources</li>
-				<li>Contribute</li>
-			</ul>
-		</div>
-		<div class="bottom-nav">
-			<ul>
-				<li>GD MFA</li>
-				<li>Post-Bac</li>
-				<li>Contact</li>
-				<li>MICA.edu</li>
-				<li>Search</li>
-			</ul>
-		</div>
-		<div class="resources">
-		<h1>Resources</h1>
-		<h2>Welcome Packet.How-To Guide.Font Guide.Equipment Guide.Senior Guide.Faculty Contacts.Scholarships + Awards.Baltimore Internships.NY Internships</h2>
-		<hr>
-		<h1>Past Resources</h1>
-		<h2>2014 Welcome Packet.2014 How-To Guide.2013 Font Guide.2013 Equipment Guide.2012 Senior Guide.2012 Faculty Contacts.2011 Scholarships + Awards.2011 Baltimore Internships.2011 NY Internships</h2>
-		</div>
+	<body bgcolor="#040603"> 
+
+<div class="calendar-info" style="display:none">
+	<div class="toggle calendar-close">
+		<button class="calendar-close">
+			&times;
+		</button>
+	</div>
+
+	<div class="search-info">
+		<h1>
+			The Type Is Right
+		</h1>
+		<h2>
+			Lorem ipsum dolor sit amet, dipis. Lorem ipsum. 
+		<strong><br>When.</strong>Oct9, 7:30-8:30pm
+		<strong><br>Where.</strong>Falvey Hall
+		</h2>
+	</div>
+	<div class="bg-image">
+		<img src="sample_image_01.png" class="img-responsive">
+	</div>
+	
+</div>
+
+<nav>
+    <ul>
+    <li><a href="index.html">MICA GD</a></li>
+    <li><a href="archive.html">Archive</a></li>
+    <li><a href="calendar.html">Calendar</a></li>
+    <li><a href="resources.html">Resources</a></li>
+    <li><button class="search"><a href="#">Contribute</a></button></li>
+  </ul>
+</nav>
+
+<nav class="bottom">
+  <ul class="bottom">
+    <li><a href="http://micadesign.org/">GD MFA</a></li>
+    <li><a href="http://micagraphicdesignpb.org/">Post-Bac</a></li>
+    <li><a href="mailto:bhorne@mica.edu?Subject=hey%20there%20MICA%20GD" target="_blank" title="Contact">Contact</a>
+    </li>
+    <li><a href="http://mica.edu/">MICA.edu</a></li>
+    <li><button class="search"><a href="#">Search</a></button></li>
+  </ul>
+</nav>
+		
+				<div class="toggle calendar">
+					<div class="title">
+					<h2><strong>Resources</strong><br>
+						<a href="#">Welcome Packet</a>.<a href="#">How-To Guide</a>.<a href="#">Font Guide</a>.<a href="#">Equipment Guide</a>.<a href="#">Senior Guide</a>.<a href="#">Faculty Contacts</a>.<a href="#">Scholarships + Awards</a>.<a href="#">Baltimore Internships</a>.<a href="#">NY Internships</a></h2>
+						
+						<h2><strong>Past Resources</strong><br>
+						<a href="#">2014 Welcome Packet</a>.<a href="#">2014 How-To Guide</a>.<a href="#">2013 Font Guide</a>.<a href="#">2013 Equipment Guide</a>.<a href="#">2012 Senior Guide</a>.<a href="#">2012 Faculty Contacts</a>.<a href="#">2011 Scholarships + Awards</a>.<a href="#">2011 Baltimore Internships</a>.<a href="#">2011 NY Internships</h2>
+					</div>
 	</body>
+
+						</h2>
+					
+					</div>	
+				</div>
+			
+
+
+	</body>
+
+	</html>
+
+<script>
+
+$(document).ready(function(){
+    $("button.calendar").click(function(){
+        $(".calendar-info").toggle();
+        return false;
+    });
+});
+
+</script>
+
+<script>
+
+$(document).ready(function(){
+    $("button.calendar-close").click(function(){
+        $(".calendar-info").toggle();
+    });
+});
+
+</script>
+
+<script>
+
+$(document).ready(function(){
+    $("button.search").click(function(){
+        $(".search-field").toggle();
+    });
+});
+
+</script>
+
+<script>
+
+$(document).ready(function(){
+    $("button.search-close").click(function(){
+        $(".search-field").toggle();
+    });
+});
+
+</script>
+		
