--- a/contribute.html
+++ b/contribute.html
@@ -6,6 +6,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Merriweather|Montserrat:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<title>MICA Graphic Design</title>
+		<meta name="viewport" content="width=device-width"/>
 	</head>
 
 	<body> 
