--- a/hoverimg.html
+++ b/hoverimg.html
@@ -7,6 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<title>MICA Graphic Design</title>
+        <meta name="viewport" content="width=device-width"/>
 	</head>
 	
 <div class="moveAround">
