--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<title>MICA Graphic Design</title>
+		<meta name="viewport" content="width=device-width"/>
 	</head>
 
 	<body bgcolor="#040603"> 
@@ -35,13 +36,51 @@
 	
 </div>
 
+<div class="contribute-field">
+
+	<div class="toggle contribute-close">
+		<button class="contribute-close">
+			&times;
+		</button>
+	</div>
+
+	<form class="contribute-form">
+    	<fieldset>
+    	<h1>Contribute</h1>
+	        <div class="pure-control-group">
+	            <label for="name">Name</label>
+	            <input id="name" type="name" placeholder=" ">
+	        </div>
+
+	        <div class="pure-control-group">
+	            <label for="email">Email</label>
+	            <input id="email" type="email" placeholder=" ">
+	        </div>
+
+	        <div class="pure-control-group">
+	            <label for="description">Description</label>
+	            <textarea class="description" placeholder=" "></textarea>
+	        </div>
+			<div class="fileUpload">
+			      <form action="#type your action here" method="POST" enctype="multipart/form-data">
+    <div id="yourBtn" onclick="getFile()">Upload</div>
+    <!-- this is your file input tag, so i hide it!-->
+    <div style='height: 0px;width:0px; overflow:hidden;'><input id="upfile" type="file" value="upload"/></div>
+    <!-- here you can have file submit button or you can write a simple script to upload the file automatically-->
+    <input type="submit" value='Submit' >
+	            
+    	</fieldset>
+	</form>
+</div>
+
+
 <nav>
     <ul>
     <li><a href="index.html">MICA GD</a></li>
     <li><a href="archive.html">Archive</a></li>
     <li><a href="calendar.html">Calendar</a></li>
     <li><a href="resources.html">Resources</a></li>
-    <li><button class="search"><a href="#">Contribute</a></button></li>
+    <li><button class="contribute"><a href="#">Contribute</a></button></li>
   </ul>
 </nav>
 
@@ -55,6 +94,20 @@
     <li><button class="search"><a href="#">Search</a></button></li>
   </ul>
 </nav>
+		
+<div class="search-field">
+
+			<div class="toggle search-close">
+			<button class="search-close">
+				&times;
+			</button>
+		</div>
+						<div class="type-search">
+					<input type="search" id="search" 
+					placeholder=search... name=s autocomplete="off">
+			</div>
+		</div>
+
 		
 				<div class="toggle calendar">
 					<div class="title">
@@ -113,6 +166,26 @@ $(document).ready(function(){
 $(document).ready(function(){
     $("button.search-close").click(function(){
         $(".search-field").toggle();
+    });
+});
+
+</script>
+
+<script>
+
+$(document).ready(function(){
+    $("button.contribute").click(function(){
+        $(".contribute-field").toggle();
+    });
+});
+
+</script>
+
+<script>
+
+$(document).ready(function(){
+    $("button.contribute-close").click(function(){
+        $(".contribute-field").toggle();
     });
 });
 
